Bug 16445 - gdb fails to build with: common.h:36:0: error: "ELFMAG0" redefined [-Werror]
Summary: gdb fails to build with: common.h:36:0: error: "ELFMAG0" redefined [-Werror]
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: build (show other bugs)
Version: HEAD
: P2 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-14 06:51 UTC by Tobias Burnus
Modified: 2014-01-17 16:34 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments
build failure (1.99 KB, text/x-log)
2014-01-14 06:51 UTC, Tobias Burnus
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias Burnus 2014-01-14 06:51:54 UTC
Created attachment 7355 [details]
build failure

The gdb git-HEAD build fails here with GCC 4.9 as follows (see attachment for the full failure):

In file included from ../../../gdb/gdbserver/linux-x86-low.c:29:0:
../../../gdb/gdbserver/../../include/elf/common.h:36:0: error: "ELFMAG0"
redefined [-Werror]
 #define ELFMAG0     0x7F /* Magic number byte 0 */
 ^
In file included from ../../../gdb/gdbserver/gdb_proc_service.h:37:0,
                 from ../../../gdb/gdbserver/linux-low.h:23,
                 from ../../../gdb/gdbserver/linux-x86-low.c:25:
/usr/include/linux/elf.h:344:0: note: this is the location of the previous
definition
 #define ELFMAG0  0x7f  /* EI_MAG */